[tool.poetry]
name = "ImageModelZoo"
version = "0.1.0"
description = ""
authors = ["minseong <qtddpms@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = { version = "2.2.2", source = "torch" }
numpy = "^1.26.4"
tensorboard = "^2.16.2"
torchmetrics = "^1.3.2"
torchvision = { version = "^0.17.2", source = "torch" }
wandb = "^0.16.6"
opencv-python = "^4.9.0.80"
albumentations = "^1.4.3"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
black = "^24.3.0"
glfw = "^2.7.0"
pytorch-lightning = "^1.7.7"
datasets = "^2.19.1"
einops = "^0.8.0"
torchsummary = "^1.5.1"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"